@startuml
entity "release" as Release {
  *ID : int
  Name : string
  Year : smallint
  catalog_number : string
  record_label : string
  release_type : enum
  TagList : text
  WikiBody : text
  WikiImage : text
  created : datetime
  updated : datetime
  showcase : bool
}

entity "edition" as Edition {
  *edition_id : int
  release_id : int
  format : string
  encoding : string
  edition_type : enum        ' original / remaster
  remaster_year : smallint
  file_list : text
  size : bigint
  description : text
  created : datetime
  updated : datetime
}

entity "release_platform" as ReleasePlatform {
  *ID : int
  ReleaseID : int
  Platform : enum            ' Spotify / Apple Music / Bandcamp / SoundCloud / YouTube
  Url : string
  created : datetime
  updated : datetime
}

entity "artists_group" as Artist {
  *ArtistID : int
  Name : string
}

entity "artists_alias" as ArtistAlias {
  *AliasID : int
  ArtistID : int
  Name : string
}

entity "release_artist" as ReleaseArtist {
  *release_id : int
  *AliasID : int
  ArtistRoleID : int
  created : datetime
}

entity "artist_role" as ArtistRole {
  *ArtistRoleID : int
  Name : string
}

entity "artist_attr" as ArtistAttr {
  *ArtistAttrID : int
  Name : string
  Description : text
}

entity "artist_has_attr" as ArtistHasAttr {
  *ArtistID : int
  *ArtistAttrID : int
}

entity "artist_stats" as ArtistStats {
  *ArtistID      : int
  release_total  : int
  platform_total : int
}

entity "tags" as Tag {
  *ID : int
  Name : string
}

entity "release_tag" as ReleaseTag {
  *TagID : int
  *release_id : int
}

Release ||--o{ Edition : has
Release ||--o{ ReleasePlatform : available_on
Release ||--o{ ReleaseArtist : credits
Release ||--o{ ReleaseTag : tagged_with
ReleaseArtist }o--|| ArtistAlias : uses_alias
ReleaseArtist }o--|| ArtistRole : role
ArtistAlias }o--|| Artist : alias_of
Artist ||--o{ ArtistHasAttr : has
ArtistHasAttr }o--|| ArtistAttr : attr
Artist ||--|| ArtistStats : stats
ReleaseTag }o--|| Tag : tag

entity "collages" as Collage {
  *CollageID : int
  Name : string
  Description : text
  TagList : text
  created : datetime
  updated : datetime
}

entity "collages_releases" as CollageRelease {
  *CollageID : int
  *release_id : int
  Sort : int
  AddedOn : datetime
}

entity "collages_artists" as CollageArtist {
  *CollageID : int
  *ArtistID : int
  Sort : int
  AddedOn : datetime
}

entity "collage_attr" as CollageAttr {
  *CollageAttrID : int
  Name : string
  Description : text
}

entity "collage_has_attr" as CollageHasAttr {
  *CollageID : int
  *CollageAttrID : int
}

Collage ||--o{ CollageRelease : includes
CollageRelease }o--|| Release : release
Collage ||--o{ CollageArtist : features
CollageArtist }o--|| Artist : artist
Collage ||--o{ CollageHasAttr : categorized_by
CollageHasAttr }o--|| CollageAttr : attr

entity "artist_discogs" as ArtistDiscogs {
  *ArtistDiscogsID : int
  ArtistID : int
  Name : string
  is_preferred : bool
  created : datetime
}

Artist ||--o{ ArtistDiscogs : discogs_entry

entity "blog" as Blog {
  *ID : int
  Title : string
  Body : text
  Time : datetime
}

entity "news" as News {
  *ID : int
  Title : string
  Body : text
  Time : datetime
}
@enduml
